--- a/css/main.css
+++ b/css/main.css
@@ -1193,7 +1193,7 @@ pre .javascript .function {
 }
 .links-of-author a::before,
 .links-of-author span.exturl::before {
-  background: #d28e36;
+  background: #4bffbf;
   border-radius: 50%;
   content: ' ';
   display: inline-block;
